[metadata]
name = autoclicker
author = Vlad Bezden
author-email = vlad.bezden@gmail.com
version = 2.0.0
licence = MIT
long_description = file: README.md
requires-python = >=3.6
classifiers =
    Environment :: Console
    Programming Language :: Python

[options]
packages = find:

[options.packages.find]
where=autoclicker

[options.entry_points]
console_scripts =
    autoclicker = autoclicker.autoclicker:main
