[metadata]
name = autoclicker
author = Vlad Bezden
author-email = vlad.bezden@gmail.com
version = 2.0.0
licence = MIT
long_description = file: README.md
requires-python = >=3.6
classifiers =
    Environment :: Console
    Programming Language :: Python

[options]
# if this options is used then no find: options should be disabled
packages = autoclicker

# it only works if __init__.py is present in package directory.
# if this option is used then packages option should be removed
# packages = find:

[options.entry_points]
console_scripts =
    autoclicker = autoclicker.autoclicker:main

